# edu-page-loader

./: Makefile  README.md  page-loader-hexlet-repl-co.html  pyproject.toml  setup.cfg
.github/workflows/: page-loader-check.yml
page_loader/: __init__.py  download_engine.py  parsers.py
page_loader/scripts/: load.py
tests/: test_download_engine.py  test_new.py  test_parsers.py
tests/fixtures/: expected_page.html  source_page.html
