[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Ramil Gadzhiev <rami.gaggi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.15.2"
pytest = "^6.2.4"
pytest-cov = "^2.12.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
