[tool.poetry]
name = "page-loader"
version = "0.1.0"
description = ""
authors = ["Ramil Gadzhiev <rami.gaggi@gmail.com>"]
packages = [
  { include = "page_loader" },
]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
requests = "^2.25.1"
beautifulsoup4 = "^4.9.3"
html5lib = "^1.1"
progress = "^1.5"

[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.15.2"
pytest = "^6.2.4"
pytest-cov = "^2.12.1"
requests-mock = "^1.9.3"

[tool.poetry.scripts]
page-loader  = "page_loader.scripts.load:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
